ncc/testsuite/positive/delayed-indexers.n
using Nemerle.Collections;

module M { public set42 (x : ref int) : void { x = 42; } }

def f (s) { s [0] == 's' }
_ = f ("foo");

def g (a) { a [0] = 12; }
def a = array [1, 2];
g (a);
System.Console.WriteLine (a [0]);

def g (a) { M.set42 (ref a [1]) }
g (a);
System.Console.WriteLine (a [1]);

def g (a) { a ["foo"] = "bar"; }
def ht = Hashtable ();
g (ht);
System.Console.WriteLine (ht ["foo"]);

def g (a) { a [0][0] = 12; }
def a = array [array [1]];
g (a);
System.Console.WriteLine (a [0][0]);

/*
BEGIN-OUTPUT
12
42
bar
12
END-OUTPUT
*/
