ncc/testsuite/negative/delayed-indexers.n
using Nemerle.Collections;

module M { public set42 (x : ref int) : void { x = 42; } }

def f (s) {
  s [0] = 's'; // E: read-only
}
f ("foo");

def g (a) {
  M.set42 (ref a ["foo"]) // E: ref/out
}
def ht = Hashtable ();
g (ht);
